# p26_master

./: .gitmodules  README.md
p26_cylinder_segmentation/: CMakeLists.txt  README.md  cheatsheet.txt  package.xml
p26_cylinder_segmentation/analysis/: cloud_filtered.pcd  cylinder.pcd  input_cloud.pcd  result1.txt  result10.txt  result10000.txt  result11.txt  result12.txt  result13.txt  result14.txt  result15.txt  result16.txt  result17.txt  result18.txt  result19.txt  result2.txt  result20.txt  result21.txt  result22.txt  result23.txt  result24.txt  result25.txt  result26.txt  result27.txt  result28.txt  result29.txt  result3.txt  result30.txt  result31.txt  result32.txt  result33.txt  result34.txt  result35.txt  result36.txt  result37.txt  result38.txt  result39.txt  result4.txt  result40.txt  result41.txt  (+14 more)
p26_cylinder_segmentation/launch/: p26_cylinder_segmentation.launch  p26_lefty.launch  p26_moveit_planning_execution.launch
p26_cylinder_segmentation/pointclouds/: cloud_filtered.pcd  cloud_filtered2.pcd  cloud_filtered3.pcd  cloud_merged.pcd  cylinder.pcd  cylinder_filtered.pcd  cylindertest.pcd  plane.pcd
p26_cylinder_segmentation/src/: addCylinder.cpp  addCylinder.h  main.cpp  main.h  main_testing_frames.cpp  segment.cpp  segment.h
p26_decompressor/: CMakeLists.txt  README.md  package.xml
p26_decompressor/include/p26_decompressor/: decompressor.h  octree_decompression.h
p26_decompressor/launch/: decompress.launch  mh_decomp.launch  roof_decomp.launch
p26_decompressor/src/: decompressor.cpp  main.cpp  octree_decompression.cpp
p26_gripper/: CMakeLists.txt  README.md  package.xml
p26_gripper/docs/: gpio_current.txt  low_pass_filter.txt  pigpio_current.txt
p26_gripper/src/: actuation.py  com_ros.py  gripping.py
p26_pick_and_place/: CMakeLists.txt  README.md  package.xml  results.txt
p26_pick_and_place/launch/: collision_map.launch  p26_filter_merged_cloud.launch  p26_large_voxels.launch  p26_large_voxels_merged.launch  p26_move.launch  p26_moveit_planning_execution.launch  p26_pick_and_place.launch  p26_show_lefty.launch  p26_start_all.launch  p26_start_all.launch.autosave  p26_start_mil.launch
p26_pick_and_place/src/: collision_map.py  main.cpp  main.h  main.py  main_backup.cpp  merge_clouds.cpp  p26_move.py  p26_move_with_gripper.py  talker.py  test.cpp
p26_robot/p26_lefty_ikfast_plugin/: CMakeLists.txt  ikfast.cpp  p26_lefty_p26_lefty_tcp_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
p26_robot/p26_lefty_ikfast_plugin/src/: p26_lefty_p26_lefty_tcp_ikfast_moveit_plugin.cpp
p26_robot/p26_lefty_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
p26_robot/p26_lefty_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  p26_lefty.srdf  ros_controllers.yaml  sensors_3d.yaml  sensors_kinect_pointcloud.yaml
p26_robot/p26_lefty_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  p26_lefty_moveit_controller_manager.launch.xml  p26_lefty_moveit_sensor_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
p26_robot/p26_robot/: CMakeLists.txt  README.md  package.xml
(+15 files in other folders)
